--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "lint": "eslint --fix"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@heroui/badge": "^2.2.12",
     "@heroui/button": "2.2.19",
+    "@heroui/card": "^2.2.18",
     "@heroui/code": "2.2.14",
+    "@heroui/dropdown": "^2.3.19",
     "@heroui/input": "2.4.19",
     "@heroui/kbd": "2.2.15",
     "@heroui/link": "2.2.16",
     "@heroui/listbox": "2.3.18",
     "@heroui/navbar": "2.2.17",
+    "@heroui/select": "^2.4.19",
     "@heroui/snippet": "2.2.20",
     "@heroui/switch": "2.2.17",
     "@heroui/system": "2.4.15",
@@ -23,12 +30,14 @@
     "@react-aria/ssr": "3.9.8",
     "@react-aria/visually-hidden": "3.8.22",
     "clsx": "2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "11.13.1",
     "intl-messageformat": "10.7.16",
     "next": "15.3.1",
     "next-themes": "0.4.6",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/compat": "1.2.8",
