--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint --fix"
+    "lint": "eslint --fix",
+    "format": "prettier -w '**/*.{js,ts,tsx,json,css,md}'",
+    "format:check": "prettier -c '**/*.{js,ts,tsx,json,css,md}'"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
