--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "todolist-devops",
   "version": "0.0.1",
   "private": true,
+  "packageManager": "pnpm@10.11.1",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
