--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@eslint/js": "9.25.1",
     "@next/eslint-plugin-next": "15.3.1",
     "@react-types/shared": "3.29.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "22.15.3",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
@@ -70,10 +71,12 @@
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-unused-imports": "4.1.4",
     "globals": "16.0.0",
+    "jest": "^29.7.0",
     "postcss": "8.5.3",
     "prettier": "3.5.3",
     "tailwind-variants": "0.3.0",
     "tailwindcss": "3.4.16",
+    "ts-jest": "^29.3.4",
     "typescript": "5.6.3"
   }
 }
