--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "eslint-plugin-unused-imports": "4.1.4",
     "globals": "16.0.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "30.0.0-beta.3",
     "postcss": "8.5.3",
     "prettier": "3.5.3",
     "tailwind-variants": "0.3.0",
