--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
     "@eslint/compat": "1.2.8",
     "@eslint/eslintrc": "3.3.1",
     "@eslint/js": "9.25.1",
@@ -71,10 +73,12 @@
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-unused-imports": "4.1.4",
     "globals": "16.0.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "30.0.0-beta.3",
     "postcss": "8.5.3",
     "prettier": "3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.12",
     "tailwind-variants": "0.3.0",
     "tailwindcss": "3.4.16",
     "ts-jest": "^29.3.4",
