--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           node-version: 20
           cache: "pnpm"
-      - run: pnpm install
+      - run: pnpm install --frozen-lockfile
 
       - name: 🔐 Auth to GCP
         uses: google-github-actions/auth@v1
@@ -34,6 +34,23 @@ jobs:
       - name: 🐳 Build Docker Image
         run: |
           docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-app:${{ github.sha }} .
+
+      - name: 🎯 Upload sourcemaps to Sentry (inside Docker)
+        env:
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+          SENTRY_ORG: institut-teknologi-sepuluh--sr
+          SENTRY_PROJECT: todolist-devops
+        run: |
+          docker run --rm \
+            -e SENTRY_AUTH_TOKEN \
+            -e SENTRY_ORG \
+            -e SENTRY_PROJECT \
+            gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-app:${{ github.sha }} \
+            npx sentry-cli releases new ${{ github.sha }} && \
+            npx sentry-cli releases files ${{ github.sha }} upload-sourcemaps .next \
+              --url-prefix "~/_next" \
+              --rewrite && \
+            npx sentry-cli releases finalize ${{ github.sha }}
 
       - name: 📤 Push Docker Image
         run: |
