--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@heroui/theme": "2.4.15",
     "@react-aria/ssr": "3.9.8",
     "@react-aria/visually-hidden": "3.8.22",
+    "@sentry/nextjs": "^9.27.0",
     "clsx": "2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "11.13.1",
@@ -57,6 +58,7 @@
     "@eslint/js": "9.25.1",
     "@next/eslint-plugin-next": "15.3.1",
     "@react-types/shared": "3.29.0",
+    "@sentry/cli": "^2.46.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
