--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "packageManager": "pnpm@10.11.1",
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint --fix",
@@ -43,7 +43,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "11.13.1",
     "intl-messageformat": "10.7.16",
-    "next": "15.3.1",
+    "next": "14.2.29",
     "next-themes": "0.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
