--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,7 +71,10 @@ jobs:
             --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-app:${{ github.sha }} \
             --platform managed \
             --region ${{ secrets.GCP_REGION }} \
-            --allow-unauthenticated
+            --allow-unauthenticated \
+            --format='value(status.url)')
+          echo "url=${URL}" >> $GITHUB_OUTPUT
+
 
       - name: ✅ Finish GitHub Deployment
         uses: bobheadxi/deployments@v1
@@ -81,3 +84,4 @@ jobs:
           deployment_id: ${{ steps.deployment.outputs.deployment_id }}
           env: production
           status: success
+          environment_url: ${{ steps.deploy.outputs.url }}
