--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,15 +66,15 @@ jobs:
           ref: ${{ github.ref }}
 
       - name: 🚀 Deploy to Cloud Run
+        id: deploy
         run: |
-          gcloud run deploy todo-app \
+          URL=$(gcloud run deploy todo-app \
             --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-app:${{ github.sha }} \
             --platform managed \
             --region ${{ secrets.GCP_REGION }} \
             --allow-unauthenticated \
             --format='value(status.url)')
           echo "url=${URL}" >> $GITHUB_OUTPUT
-
 
       - name: ✅ Finish GitHub Deployment
         uses: bobheadxi/deployments@v1
