--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,12 +1,15 @@
 name: Deploy to Google Cloud Run
 
 on:
-  push:
-    branches: [main]
+  workflow_run:
+    workflows: ["Code Check & Run Tests"]
+    types:
+      - completed
 
 jobs:
   deploy:
     name: 🚀 Build & Deploy
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
