--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,15 +1,51 @@
-name: Deploy to Google Cloud Run
+name: CI & CD Pipeline
 
 on:
-  workflow_run:
-    workflows: ["Code Check & Run Tests"]
-    types:
-      - completed
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
+  code-checks:
+    name: 🧹 Code Quality Checks
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 20
+          cache: 'pnpm'
+      - run: pnpm install
+      - name: ⬣ Run ESLint
+        run: pnpm lint
+      - name: ʦ Run TypeScript Check
+        run: pnpm typecheck
+      - name: 💅 Run Prettier
+        run: pnpm format:check
+
+  test:
+    name: 🧪 Run Unit Tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 20
+          cache: 'pnpm'
+      - run: pnpm install
+      - run: pnpm test
+
   deploy:
-    name: 🚀 Build & Deploy
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    name: 🚀 Deploy to Google Cloud Run
+    needs: [code-checks, test]
+    if: success()
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -19,13 +55,14 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 20
-          cache: "pnpm"
+          cache: 'pnpm'
       - run: pnpm install --frozen-lockfile
 
       - name: 🔐 Auth to GCP
         uses: google-github-actions/auth@v1
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
+
       - name: 📦 Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v1
         with:
@@ -58,15 +95,6 @@ jobs:
       - name: 📤 Push Docker Image
         run: |
           docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-app:${{ github.sha }}
-
-      - name: 📦 Create GitHub Deployment
-        uses: bobheadxi/deployments@v1
-        id: deployment
-        with:
-          step: start
-          token: ${{ secrets.GH_PAT }}
-          env: production
-          ref: ${{ github.event.workflow_run.head_branch }}
 
       - name: 🚀 Deploy to Cloud Run
         id: deploy
