--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -49,13 +49,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: pnpm/action-setup@v2
         with:
           version: 10
+
       - uses: actions/setup-node@v3
         with:
           node-version: 20
           cache: 'pnpm'
+
       - run: pnpm install --frozen-lockfile
 
       - name: 🔐 Auth to GCP
@@ -71,11 +74,12 @@ jobs:
       - name: 🔑 Docker Auth to GCR
         run: gcloud auth configure-docker
 
-      - name: 🐳 Build Docker Image
+      # --- Frontend ---
+      - name: 🐳 Build Frontend Docker Image
         run: |
           docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-app:${{ github.sha }} .
 
-      - name: 🎯 Upload sourcemaps to Sentry (inside Docker)
+      - name: 🎯 Upload sourcemaps to Sentry (Frontend)
         env:
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
           SENTRY_ORG: institut-teknologi-sepuluh--sr
@@ -92,9 +96,40 @@ jobs:
               --rewrite && \
             npx sentry-cli releases finalize ${{ github.sha }}
 
-      - name: 📤 Push Docker Image
+      - name: 📤 Push Frontend Docker Image
         run: |
           docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-app:${{ github.sha }}
+
+      - name: 🚀 Deploy Frontend to Cloud Run
+        id: deploy-frontend
+        run: |
+          FRONTEND_URL=$(gcloud run deploy todo-app \
+            --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-app:${{ github.sha }} \
+            --platform managed \
+            --region ${{ secrets.GCP_REGION }} \
+            --allow-unauthenticated \
+            --format='value(status.url)')
+          echo "frontend_url=${FRONTEND_URL}" >> $GITHUB_OUTPUT
+
+      # --- Backend ---
+      - name: 🐳 Build Backend Docker Image
+        run: |
+          docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-backend:${{ github.sha }} ./server
+
+      - name: 📤 Push Backend Docker Image
+        run: |
+          docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-backend:${{ github.sha }}
+
+      - name: 🚀 Deploy Backend to Cloud Run
+        id: deploy-backend
+        run: |
+          BACKEND_URL=$(gcloud run deploy todo-backend \
+            --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-backend:${{ github.sha }} \
+            --platform managed \
+            --region ${{ secrets.GCP_REGION }} \
+            --allow-unauthenticated \
+            --format='value(status.url)')
+          echo "backend_url=${BACKEND_URL}" >> $GITHUB_OUTPUT
 
       - name: 📦 Create GitHub Deployment
         uses: bobheadxi/deployments@v1
@@ -103,18 +138,7 @@ jobs:
           step: start
           token: ${{ secrets.GH_PAT }}
           env: production
-          ref: ${{ github.event.workflow_run.head_branch }}
-
-      - name: 🚀 Deploy to Cloud Run
-        id: deploy
-        run: |
-          URL=$(gcloud run deploy todo-app \
-            --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-app:${{ github.sha }} \
-            --platform managed \
-            --region ${{ secrets.GCP_REGION }} \
-            --allow-unauthenticated \
-            --format='value(status.url)')
-          echo "url=${URL}" >> $GITHUB_OUTPUT
+          ref: ${{ github.ref_name }}
 
       - name: ✅ Finish GitHub Deployment
         uses: bobheadxi/deployments@v1
@@ -124,4 +148,4 @@ jobs:
           deployment_id: ${{ steps.deployment.outputs.deployment_id }}
           env: production
           status: success
-          env_url: ${{ steps.deploy.outputs.url }}
+          env_url: ${{ steps.deploy-frontend.outputs.frontend_url }}
