--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "packageManager": "pnpm@10.11.1",
   "scripts": {
-    "dev": "next dev",
+    "dev": "concurrently \"pnpm dev:next\" \"pnpm dev:server\"",
+    "dev:next": "next dev",
+    "dev:server": "tsx server/index.ts",
     "build": "next build",
     "start": "next start",
     "lint": "eslint --fix",
@@ -40,9 +42,13 @@
     "@react-aria/visually-hidden": "3.8.22",
     "@sentry/nextjs": "^9.27.0",
     "clsx": "2.1.1",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "framer-motion": "11.13.1",
     "intl-messageformat": "10.7.16",
+    "mysql2": "^3.14.1",
     "next": "14.2.29",
     "next-themes": "0.4.6",
     "react": "18.3.1",
@@ -62,6 +68,8 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
     "@types/jest": "^29.5.14",
     "@types/node": "22.15.3",
     "@types/react": "18.3.3",
@@ -69,6 +77,7 @@
     "@typescript-eslint/eslint-plugin": "8.31.1",
     "@typescript-eslint/parser": "8.31.1",
     "autoprefixer": "10.4.21",
+    "concurrently": "^9.1.2",
     "eslint": "9.25.1",
     "eslint-config-next": "15.3.1",
     "eslint-config-prettier": "10.1.2",
@@ -87,6 +96,7 @@
     "prettier-plugin-tailwindcss": "^0.6.12",
     "tailwind-variants": "0.3.0",
     "tailwindcss": "3.4.16",
+    "tsx": "^4.20.3",
     "typescript": "5.6.3",
     "vitest": "^3.2.2"
   }
