fix: modify dockerfile for backend

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -112,12 +112,9 @@ jobs:
           echo "frontend_url=${FRONTEND_URL}" >> $GITHUB_OUTPUT
 
       # --- Backend ---
-      - name: 📁 Copy pnpm-lock.yaml to server
-        run: cp pnpm-lock.yaml server/
-
       - name: 🐳 Build Backend Docker Image
         run: |
-          docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-backend:${{ github.sha }} ./server
+          docker build -f server/Dockerfile -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-backend:${{ github.sha }} .
 
       - name: 📤 Push Backend Docker Image
         run: |
