--- a/src/app/server/Dockerfile
+++ b/src/app/server/Dockerfile
@@ -3,10 +3,11 @@ FROM node:18-alpine
 WORKDIR /app
 
 COPY package.json pnpm-lock.yaml ./
+COPY server ./server
 
 RUN npm install -g pnpm && pnpm install --frozen-lockfile
 
-COPY . .
+WORKDIR /app/server
 
 EXPOSE 8080
 
