ci: modify path folder

--- a/src/app/server/Dockerfile
+++ b/src/app/server/Dockerfile
@@ -3,7 +3,7 @@ FROM node:18-alpine
 WORKDIR /app
 
 COPY package.json pnpm-lock.yaml ./
-COPY server ./server
+COPY src/app/server ./ 
 
 RUN npm install -g pnpm && pnpm install --frozen-lockfile
 
