--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@heroui/alert": "^2.2.21",
     "@heroui/badge": "^2.2.12",
     "@heroui/button": "2.2.19",
     "@heroui/card": "^2.2.18",
