--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,7 +2,7 @@ name: CI & CD Pipeline
 
 on:
   push:
-    branches: [main]
+    branches: [main, dev]
   pull_request:
     branches: [main]
 
@@ -96,10 +96,10 @@ jobs:
 
       # --- Frontend ---
       - name: 🐳 Build Frontend Docker Image
-        env:
-          NEXT_PUBLIC_API_URL: ${{ steps.deploy-backend.outputs.backend_url }}
         run: |
-          docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-app:${{ github.sha }} .
+          docker build \
+            --build-arg NEXT_PUBLIC_API_URL=${{ steps.deploy-backend.outputs.backend_url }} \
+            -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-app:${{ github.sha }} .
 
       - name: 🎯 Upload sourcemaps to Sentry (Frontend)
         env:
