--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -44,6 +44,9 @@ jobs:
 
   deploy:
     name: 🚀 Deploy to Google Cloud Run
+    env:
+      ENV_NAME: ${{ github.ref_name == 'main' && 'production' || 'dev' }}
+      SUFFIX: ${{ github.ref_name == 'main' && '' || '-dev' }}
     needs: [code-checks, test]
     if: success()
     runs-on: ubuntu-latest
@@ -77,17 +80,18 @@ jobs:
       # --- Backend ---
       - name: 🐳 Build Backend Docker Image
         run: |
-          docker build -f src/app/server/Dockerfile -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-backend:${{ github.sha }} .
+          docker build -f src/app/server/Dockerfile \
+            -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-backend${SUFFIX}:${{ github.sha }} .
 
       - name: 📤 Push Backend Docker Image
         run: |
-          docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-backend:${{ github.sha }}
+          docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-backend${SUFFIX}:${{ github.sha }}
 
       - name: 🚀 Deploy Backend to Cloud Run
         id: deploy-backend
         run: |
-          BACKEND_URL=$(gcloud run deploy todo-backend \
-            --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-backend:${{ github.sha }} \
+          BACKEND_URL=$(gcloud run deploy todo-backend${SUFFIX} \
+            --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-backend${SUFFIX}:${{ github.sha }} \
             --platform managed \
             --region ${{ secrets.GCP_REGION }} \
             --allow-unauthenticated \
@@ -99,7 +103,22 @@ jobs:
         run: |
           docker build \
             --build-arg NEXT_PUBLIC_API_URL=${{ steps.deploy-backend.outputs.backend_url }} \
-            -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-app:${{ github.sha }} .
+            -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-app${SUFFIX}:${{ github.sha }} .
+
+      - name: 📤 Push Frontend Docker Image
+        run: |
+          docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-app${SUFFIX}:${{ github.sha }}
+
+      - name: 🚀 Deploy Frontend to Cloud Run
+        id: deploy-frontend
+        run: |
+          FRONTEND_URL=$(gcloud run deploy todo-app${SUFFIX} \
+            --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-app${SUFFIX}:${{ github.sha }} \
+            --platform managed \
+            --region ${{ secrets.GCP_REGION }} \
+            --allow-unauthenticated \
+            --format='value(status.url)')
+          echo "frontend_url=${FRONTEND_URL}" >> $GITHUB_OUTPUT
 
       - name: 🎯 Upload sourcemaps to Sentry (Frontend)
         env:
@@ -107,31 +126,11 @@ jobs:
           SENTRY_ORG: institut-teknologi-sepuluh--sr
           SENTRY_PROJECT: todolist-devops
         run: |
-          docker run --rm \
-            -e SENTRY_AUTH_TOKEN \
-            -e SENTRY_ORG \
-            -e SENTRY_PROJECT \
-            gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-app:${{ github.sha }} \
-            npx sentry-cli releases new ${{ github.sha }} && \
-            npx sentry-cli releases files ${{ github.sha }} upload-sourcemaps .next \
-              --url-prefix "~/_next" \
-              --rewrite && \
-            npx sentry-cli releases finalize ${{ github.sha }}
-
-      - name: 📤 Push Frontend Docker Image
-        run: |
-          docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-app:${{ github.sha }}
-
-      - name: 🚀 Deploy Frontend to Cloud Run
-        id: deploy-frontend
-        run: |
-          FRONTEND_URL=$(gcloud run deploy todo-app \
-            --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-app:${{ github.sha }} \
-            --platform managed \
-            --region ${{ secrets.GCP_REGION }} \
-            --allow-unauthenticated \
-            --format='value(status.url)')
-          echo "frontend_url=${FRONTEND_URL}" >> $GITHUB_OUTPUT
+          npx sentry-cli releases new ${{ github.sha }}
+          npx sentry-cli releases files ${{ github.sha }} upload-sourcemaps .next \
+            --url-prefix "~/_next" \
+            --rewrite
+          npx sentry-cli releases finalize ${{ github.sha }}
 
       - name: 📦 Create GitHub Deployment
         uses: bobheadxi/deployments@v1
@@ -139,7 +138,7 @@ jobs:
         with:
           step: start
           token: ${{ secrets.GH_PAT }}
-          env: production
+          env: ${{ env.ENV_NAME }}
           ref: ${{ github.ref }}
 
       - name: ✅ Finish GitHub Deployment
@@ -148,6 +147,6 @@ jobs:
           step: finish
           token: ${{ secrets.GH_PAT }}
           deployment_id: ${{ steps.deployment.outputs.deployment_id }}
-          env: production
+          env: ${{ env.ENV_NAME }}
           status: success
           env_url: ${{ steps.deploy-frontend.outputs.frontend_url }}
