--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -140,6 +140,7 @@ jobs:
           token: ${{ secrets.GH_PAT }}
           env: ${{ env.ENV_NAME }}
           ref: ${{ github.ref }}
+          environment: ${{ env.ENV_NAME }}
 
       - name: ✅ Finish GitHub Deployment
         uses: bobheadxi/deployments@v1
@@ -148,5 +149,6 @@ jobs:
           token: ${{ secrets.GH_PAT }}
           deployment_id: ${{ steps.deployment.outputs.deployment_id }}
           env: ${{ env.ENV_NAME }}
+          environment: ${{ env.ENV_NAME }}
           status: success
           env_url: ${{ steps.deploy-frontend.outputs.frontend_url }}
