--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@heroui/switch": "2.2.17",
     "@heroui/system": "2.4.15",
     "@heroui/theme": "2.4.15",
+    "@heroui/toast": "^2.0.11",
     "@react-aria/ssr": "3.9.8",
     "@react-aria/visually-hidden": "3.8.22",
     "@sentry/nextjs": "^9.27.0",
