chore: add scripts for build

--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "dev": "concurrently \"pnpm dev:next\" \"pnpm dev:server\"",
     "dev:next": "next dev",
     "dev:server": "tsx src/app/server/index.ts",
-    "build": "next build",
+    "build": "next build && pnpm build:server",
+    "build:server": "tsc",
     "start": "next start",
+    "start:server": "node dist/app/server/index.ts",
     "lint": "eslint --fix",
     "typecheck": "tsc --noEmit --incremental false",
     "format": "prettier -w '**/*.{js,ts,tsx,json,css,md}'",
