--- a/src/app/server/Dockerfile
+++ b/src/app/server/Dockerfile
@@ -3,11 +3,9 @@ FROM node:18-alpine
 WORKDIR /app
 
 COPY package.json pnpm-lock.yaml ./
-COPY src/app/server ./ 
-
 RUN npm install -g pnpm && pnpm install --frozen-lockfile
 
-WORKDIR /app/server
+COPY . .
 
 EXPOSE 8080
 
