--- a/src/app/server/Dockerfile
+++ b/src/app/server/Dockerfile
@@ -2,13 +2,13 @@ FROM node:18-alpine
 
 WORKDIR /app
 
-COPY ../../package.json ../../pnpm-lock.yaml ./
+COPY ../../package.json ../../pnpm-lock.yaml ../../tsconfig.json ../../tsconfig.server.json ./
 
 RUN npm install -g pnpm && pnpm install --frozen-lockfile --prod
 
 COPY ../../. .
 
-RUN pnpm build:server
+RUN pnpm exec tsc -p ./tsconfig.server.json
 
 EXPOSE 3001
 
