fix: modify dockerfile

--- a/src/app/server/Dockerfile
+++ b/src/app/server/Dockerfile
@@ -2,13 +2,13 @@ FROM node:18-alpine
 
 WORKDIR /app
 
-COPY ../../package.json ../../pnpm-lock.yaml ../../tsconfig.json ../../tsconfig.server.json ./
+COPY ../../../package.json ../../../pnpm-lock.yaml ../../../tsconfig.server.json ./
 
-RUN npm install -g pnpm && pnpm install --frozen-lockfile --prod
+RUN npm install -g pnpm && pnpm install --frozen-lockfile
 
-COPY ../../. .
+COPY ../../../. .
 
-RUN pnpm exec tsc -p ../../tsconfig.server.json
+RUN pnpm exec tsc -p tsconfig.server.json
 
 EXPOSE 3001
 
