--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "next build && pnpm build:server",
     "build:server": "tsc -p tsconfig.server.json",
     "start": "next start",
-    "start:server": "node dist/app/server/index.ts",
+    "start:server": "node dist/app/server/index.js",
     "lint": "eslint --fix",
     "typecheck": "tsc --noEmit --incremental false",
     "format": "prettier -w '**/*.{js,ts,tsx,json,css,md}'",
