--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -95,7 +95,7 @@ jobs:
       - name: 🚀 Deploy Backend to Cloud Run
         id: deploy-backend
         run: |
-          BACKEND_URL=$(gcloud run deploy todo-backend$SUFFIX \
+          BACKEND_URL=$(gcloud run deploy todo-backend-new$SUFFIX \
             --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-backend$SUFFIX:${{ github.sha }} \
             --platform managed \
             --region ${{ secrets.GCP_REGION }} \
