--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -117,13 +117,13 @@ jobs:
       # --- Frontend ---
       - name: 🐳 Build Frontend Docker Image
         run: |
+          echo "Building Frontend with BACKEND_URL=${{ steps.deploy-backend.outputs.backend_url }}"
           docker build \
-            --build-arg NEXT_PUBLIC_API_URL=$BACKEND_URL \
+            --build-arg NEXT_PUBLIC_API_URL=${{ steps.deploy-backend.outputs.backend_url }} \
             --build-arg NEXT_PUBLIC_FRONTEND_URL=https://todo-app${{ env.SUFFIX }}-381607765507.asia-southeast2.run.app \
-            -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-app$SUFFIX:${{ github.sha }} .
+            -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/todo-app${{ env.SUFFIX }}:${{ github.sha }} .
         env:
           SUFFIX: ${{ env.SUFFIX }}
-          BACKEND_URL: ${{ env.BACKEND_URL }}
 
       - name: 📤 Push Frontend Docker Image
         run: |
