--- a/src/app/server/Dockerfile
+++ b/src/app/server/Dockerfile
@@ -2,8 +2,8 @@ FROM node:18-alpine
 
 WORKDIR /app
 
-COPY ./dist ./dist
-COPY ./package.json ./pnpm-lock.yaml ./
+COPY ../../dist ./dist
+COPY ../../package.json ../../pnpm-lock.yaml ./
 
 RUN npm install -g pnpm && pnpm install --prod
 
