fix: modify path in dockerfile be

--- a/src/app/server/Dockerfile
+++ b/src/app/server/Dockerfile
@@ -2,11 +2,11 @@ FROM node:18-alpine
 
 WORKDIR /app
 
-COPY ../../dist ./dist
-COPY ../../package.json ../../pnpm-lock.yaml ./
+COPY dist ./dist
+COPY package.json pnpm-lock.yaml ./
 
 RUN npm install -g pnpm && pnpm install --prod
 
 EXPOSE 8080
 
-CMD ["node", "dist/index.js"]
+CMD ["node", "dist/app/server/index.js"]
