fix: add ls -la

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -79,7 +79,9 @@ jobs:
 
       # --- Backend ---
       - name: 🪧 Build Backend
-        run: pnpm exec tsc -p tsconfig.server.json
+        run: | 
+          pnpm exec tsc -p tsconfig.server.json
+          ls -la
 
       - name: 🎯 Upload sourcemaps to Sentry (Backend)
         env:
