fix: modify cd and dockerfile be

--- a/src/app/server/Dockerfile
+++ b/src/app/server/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /app
 COPY dist ./dist
 COPY package.json pnpm-lock.yaml ./
 
-RUN npm install -g pnpm && pnpm install --prod
+RUN npm install -g pnpm && pnpm install --prod --frozen-lockfile
 
 EXPOSE 8080
 
