--- a/src/app/server/Dockerfile
+++ b/src/app/server/Dockerfile
@@ -2,7 +2,7 @@ FROM node:18-alpine
 
 WORKDIR /app
 
-COPY dist ./dist
+COPY dist/app/server ./dist
 COPY package.json pnpm-lock.yaml ./
 
 RUN npm install -g pnpm && pnpm install --prod --frozen-lockfile
