--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,13 +1,16 @@
 {
-  "extends": "./tsconfig.json",
-
   "compilerOptions": {
-    "noEmit": false,
+    "target": "ES2020",
     "module": "commonjs",
     "outDir": "./dist",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true
   },
-
   "include": ["src/app/server/**/*.ts", "src/lib/**/*.ts"],
   "exclude": ["node_modules"]
 }
